// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`fetchDocsTool should have a consistent return structure: structure 1`] = `
[
  "fetchDocs",
  {
    "description": "Fetch documentation for one or more URLs extracted from previous tool calls responses. The URLs should be passed as an array in the "urlList" argument.",
    "inputSchema": {
      "urlList": ZodArray {
        "and": [Function],
        "array": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "clone": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "element": ZodString {
            "and": [Function],
            "array": [Function],
            "base64": [Function],
            "base64url": [Function],
            "brand": [Function],
            "catch": [Function],
            "check": [Function],
            "cidrv4": [Function],
            "cidrv6": [Function],
            "clone": [Function],
            "cuid": [Function],
            "cuid2": [Function],
            "date": [Function],
            "datetime": [Function],
            "decode": [Function],
            "decodeAsync": [Function],
            "def": {
              "type": "string",
            },
            "default": [Function],
            "describe": [Function],
            "duration": [Function],
            "e164": [Function],
            "email": [Function],
            "emoji": [Function],
            "encode": [Function],
            "encodeAsync": [Function],
            "endsWith": [Function],
            "format": null,
            "guid": [Function],
            "includes": [Function],
            "ipv4": [Function],
            "ipv6": [Function],
            "isNullable": [Function],
            "isOptional": [Function],
            "jwt": [Function],
            "ksuid": [Function],
            "length": [Function],
            "lowercase": [Function],
            "max": [Function],
            "maxLength": null,
            "meta": [Function],
            "min": [Function],
            "minLength": null,
            "nanoid": [Function],
            "nonempty": [Function],
            "nonoptional": [Function],
            "normalize": [Function],
            "nullable": [Function],
            "nullish": [Function],
            "optional": [Function],
            "or": [Function],
            "overwrite": [Function],
            "parse": [Function],
            "parseAsync": [Function],
            "pipe": [Function],
            "prefault": [Function],
            "readonly": [Function],
            "refine": [Function],
            "regex": [Function],
            "register": [Function],
            "safeDecode": [Function],
            "safeDecodeAsync": [Function],
            "safeEncode": [Function],
            "safeEncodeAsync": [Function],
            "safeParse": [Function],
            "safeParseAsync": [Function],
            "slugify": [Function],
            "spa": [Function],
            "startsWith": [Function],
            "superRefine": [Function],
            "time": [Function],
            "toJSONSchema": [Function],
            "toLowerCase": [Function],
            "toUpperCase": [Function],
            "transform": [Function],
            "trim": [Function],
            "type": "string",
            "ulid": [Function],
            "uppercase": [Function],
            "url": [Function],
            "uuid": [Function],
            "uuidv4": [Function],
            "uuidv6": [Function],
            "uuidv7": [Function],
            "xid": [Function],
            "~standard": {
              "jsonSchema": {
                "input": [Function],
                "output": [Function],
              },
              "validate": [Function],
              "vendor": "zod",
              "version": 1,
            },
          },
          "type": "array",
        },
        "default": [Function],
        "describe": [Function],
        "element": ZodString {
          "and": [Function],
          "array": [Function],
          "base64": [Function],
          "base64url": [Function],
          "brand": [Function],
          "catch": [Function],
          "check": [Function],
          "cidrv4": [Function],
          "cidrv6": [Function],
          "clone": [Function],
          "cuid": [Function],
          "cuid2": [Function],
          "date": [Function],
          "datetime": [Function],
          "decode": [Function],
          "decodeAsync": [Function],
          "def": {
            "type": "string",
          },
          "default": [Function],
          "describe": [Function],
          "duration": [Function],
          "e164": [Function],
          "email": [Function],
          "emoji": [Function],
          "encode": [Function],
          "encodeAsync": [Function],
          "endsWith": [Function],
          "format": null,
          "guid": [Function],
          "includes": [Function],
          "ipv4": [Function],
          "ipv6": [Function],
          "isNullable": [Function],
          "isOptional": [Function],
          "jwt": [Function],
          "ksuid": [Function],
          "length": [Function],
          "lowercase": [Function],
          "max": [Function],
          "maxLength": null,
          "meta": [Function],
          "min": [Function],
          "minLength": null,
          "nanoid": [Function],
          "nonempty": [Function],
          "nonoptional": [Function],
          "normalize": [Function],
          "nullable": [Function],
          "nullish": [Function],
          "optional": [Function],
          "or": [Function],
          "overwrite": [Function],
          "parse": [Function],
          "parseAsync": [Function],
          "pipe": [Function],
          "prefault": [Function],
          "readonly": [Function],
          "refine": [Function],
          "regex": [Function],
          "register": [Function],
          "safeDecode": [Function],
          "safeDecodeAsync": [Function],
          "safeEncode": [Function],
          "safeEncodeAsync": [Function],
          "safeParse": [Function],
          "safeParseAsync": [Function],
          "slugify": [Function],
          "spa": [Function],
          "startsWith": [Function],
          "superRefine": [Function],
          "time": [Function],
          "toJSONSchema": [Function],
          "toLowerCase": [Function],
          "toUpperCase": [Function],
          "transform": [Function],
          "trim": [Function],
          "type": "string",
          "ulid": [Function],
          "uppercase": [Function],
          "url": [Function],
          "uuid": [Function],
          "uuidv4": [Function],
          "uuidv6": [Function],
          "uuidv7": [Function],
          "xid": [Function],
          "~standard": {
            "jsonSchema": {
              "input": [Function],
              "output": [Function],
            },
            "validate": [Function],
            "vendor": "zod",
            "version": 1,
          },
        },
        "encode": [Function],
        "encodeAsync": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "length": [Function],
        "max": [Function],
        "meta": [Function],
        "min": [Function],
        "nonempty": [Function],
        "nonoptional": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "spa": [Function],
        "superRefine": [Function],
        "toJSONSchema": [Function],
        "transform": [Function],
        "type": "array",
        "unwrap": [Function],
        "~standard": {
          "jsonSchema": {
            "input": [Function],
            "output": [Function],
          },
          "validate": [Function],
          "vendor": "zod",
          "version": 1,
        },
      },
    },
  },
  [Function],
]
`;

exports[`fetchDocsTool, callback should parse parameters, default 1`] = `
{
  "content": [
    {
      "text": "components/button.md",
      "type": "text",
    },
  ],
}
`;

exports[`fetchDocsTool, callback should parse parameters, multiple files 1`] = `
{
  "content": [
    {
      "text": "combined docs content",
      "type": "text",
    },
  ],
}
`;

exports[`fetchDocsTool, callback should parse parameters, with empty files 1`] = `
{
  "content": [
    {
      "text": "trimmed content",
      "type": "text",
    },
  ],
}
`;

exports[`fetchDocsTool, callback should parse parameters, with empty strings in a urlList 1`] = `
{
  "content": [
    {
      "text": "trimmed and empty content",
      "type": "text",
    },
  ],
}
`;

exports[`fetchDocsTool, callback should parse parameters, with empty urlList 1`] = `
{
  "content": [
    {
      "text": "empty content",
      "type": "text",
    },
  ],
}
`;

exports[`fetchDocsTool, callback should parse parameters, with invalid urlList 1`] = `
{
  "content": [
    {
      "text": "invalid path",
      "type": "text",
    },
  ],
}
`;
